--- a/FW/THPFW.ioc
+++ b/FW/THPFW.ioc
@@ -32,39 +32,40 @@ Mcu.Name=STM32L431C(B-C)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
 Mcu.Pin1=PH0-OSC_IN (PH0)
-Mcu.Pin10=PB0
-Mcu.Pin11=PB1
-Mcu.Pin12=PB2
-Mcu.Pin13=PB10
-Mcu.Pin14=PB12
-Mcu.Pin15=PB13
-Mcu.Pin16=PB14
-Mcu.Pin17=PB15
-Mcu.Pin18=PA8
-Mcu.Pin19=PA9
+Mcu.Pin10=PA7
+Mcu.Pin11=PB0
+Mcu.Pin12=PB1
+Mcu.Pin13=PB2
+Mcu.Pin14=PB10
+Mcu.Pin15=PB12
+Mcu.Pin16=PB13
+Mcu.Pin17=PB14
+Mcu.Pin18=PB15
+Mcu.Pin19=PA8
 Mcu.Pin2=PH1-OSC_OUT (PH1)
-Mcu.Pin20=PA10
-Mcu.Pin21=PA11
-Mcu.Pin22=PA12
-Mcu.Pin23=PA13 (JTMS-SWDIO)
-Mcu.Pin24=PA14 (JTCK-SWCLK)
-Mcu.Pin25=PB4 (NJTRST)
-Mcu.Pin26=PB5
-Mcu.Pin27=PB6
-Mcu.Pin28=PB7
-Mcu.Pin29=PB8
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA11
+Mcu.Pin23=PA12
+Mcu.Pin24=PA13 (JTMS-SWDIO)
+Mcu.Pin25=PA14 (JTCK-SWCLK)
+Mcu.Pin26=PB4 (NJTRST)
+Mcu.Pin27=PB5
+Mcu.Pin28=PB6
+Mcu.Pin29=PB7
 Mcu.Pin3=PA0
-Mcu.Pin30=PB9
-Mcu.Pin31=VP_ADC1_TempSens_Input
-Mcu.Pin32=VP_CRC_VS_CRC
-Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin30=PB8
+Mcu.Pin31=PB9
+Mcu.Pin32=VP_ADC1_TempSens_Input
+Mcu.Pin33=VP_CRC_VS_CRC
+Mcu.Pin34=VP_SYS_VS_Systick
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
-Mcu.Pin9=PA7
-Mcu.PinsNb=34
+Mcu.Pin9=PA6
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431CCTx
@@ -119,6 +120,10 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=SIM_UART_DTR
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=SIM_GPS
+PA6.Locked=true
+PA6.Signal=GPIO_Output
 PA7.Mode=I2C
 PA7.Signal=I2C3_SCL
 PA8.GPIOParameters=GPIO_Label
