--- a/FW/THPFW.ioc
+++ b/FW/THPFW.ioc
@@ -15,67 +15,6 @@ ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.I2C2_RX.4.Direction=DMA_PERIPH_TO_MEMORY
-Dma.I2C2_RX.4.Instance=DMA1_Channel5
-Dma.I2C2_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C2_RX.4.MemInc=DMA_MINC_ENABLE
-Dma.I2C2_RX.4.Mode=DMA_NORMAL
-Dma.I2C2_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C2_RX.4.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C2_RX.4.Priority=DMA_PRIORITY_LOW
-Dma.I2C2_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.I2C2_TX.5.Direction=DMA_MEMORY_TO_PERIPH
-Dma.I2C2_TX.5.Instance=DMA1_Channel4
-Dma.I2C2_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C2_TX.5.MemInc=DMA_MINC_ENABLE
-Dma.I2C2_TX.5.Mode=DMA_NORMAL
-Dma.I2C2_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C2_TX.5.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C2_TX.5.Priority=DMA_PRIORITY_LOW
-Dma.I2C2_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.I2C3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.I2C3_RX.0.Instance=DMA1_Channel3
-Dma.I2C3_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C3_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.I2C3_RX.0.Mode=DMA_NORMAL
-Dma.I2C3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C3_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C3_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.I2C3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.I2C3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.I2C3_TX.1.Instance=DMA1_Channel2
-Dma.I2C3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C3_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.I2C3_TX.1.Mode=DMA_NORMAL
-Dma.I2C3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C3_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C3_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.I2C3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.Request0=I2C3_RX
-Dma.Request1=I2C3_TX
-Dma.Request2=USART2_RX
-Dma.Request3=USART2_TX
-Dma.Request4=I2C2_RX
-Dma.Request5=I2C2_TX
-Dma.RequestsNb=6
-Dma.USART2_RX.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART2_RX.2.Instance=DMA1_Channel6
-Dma.USART2_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_RX.2.MemInc=DMA_MINC_ENABLE
-Dma.USART2_RX.2.Mode=DMA_NORMAL
-Dma.USART2_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_RX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_RX.2.Priority=DMA_PRIORITY_LOW
-Dma.USART2_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART2_TX.3.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART2_TX.3.Instance=DMA1_Channel7
-Dma.USART2_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_TX.3.MemInc=DMA_MINC_ENABLE
-Dma.USART2_TX.3.Mode=DMA_NORMAL
-Dma.USART2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_TX.3.Priority=DMA_PRIORITY_LOW
-Dma.USART2_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Speed_Mode=I2C_Fast
@@ -92,20 +31,18 @@ Mcu.CPN=STM32L431CCT6
 Mcu.Family=STM32L4
 Mcu.IP0=ADC1
 Mcu.IP1=CRC
-Mcu.IP10=TIM1
-Mcu.IP11=TIM2
-Mcu.IP12=TIM16
-Mcu.IP13=USART1
-Mcu.IP14=USART2
-Mcu.IP2=DMA
-Mcu.IP3=I2C1
-Mcu.IP4=I2C2
-Mcu.IP5=I2C3
-Mcu.IP6=IWDG
-Mcu.IP7=NVIC
-Mcu.IP8=RCC
-Mcu.IP9=SYS
-Mcu.IPNb=15
+Mcu.IP10=TIM16
+Mcu.IP11=USART1
+Mcu.IP12=USART2
+Mcu.IP2=I2C1
+Mcu.IP3=I2C2
+Mcu.IP4=I2C3
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IP8=TIM1
+Mcu.IP9=TIM2
+Mcu.IPNb=13
 Mcu.Name=STM32L431C(B-C)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
@@ -136,30 +73,23 @@ Mcu.Pin30=PB8
 Mcu.Pin31=PB9
 Mcu.Pin32=VP_ADC1_TempSens_Input
 Mcu.Pin33=VP_CRC_VS_CRC
-Mcu.Pin34=VP_IWDG_VS_IWDG
-Mcu.Pin35=VP_SYS_VS_Systick
-Mcu.Pin36=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin37=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin38=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin35=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=39
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431CCTx
-MxCube.Version=6.7.0
-MxDb.Version=DB.6.0.70
+MxCube.Version=6.8.1
+MxDb.Version=DB.6.0.81
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -169,7 +99,8 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.RCC_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:false\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:false
+NVIC.TIM1_UP_TIM16_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=Tamp
@@ -291,7 +222,7 @@ ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32L431CCTx
 ProjectManager.FirmwarePackage=STM32Cube FW_L4 V1.17.2
-ProjectManager.FreePins=false
+ProjectManager.FreePins=true
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
@@ -309,7 +240,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_CRC_Init-CRC-false-HAL-true,11-MX_IWDG_Init-IWDG-false-HAL-true,12-MX_TIM1_Init-TIM1-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true,14-MX_TIM16_Init-TIM16-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_CRC_Init-CRC-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_TIM16_Init-TIM16-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=40000000
 RCC.APB1Freq_Value=40000000
@@ -362,9 +293,10 @@ SH.ADCx_IN6.ConfNb=1
 SH.S_TIM16_CH1.0=TIM16_CH1,PWM Generation1 CH1
 SH.S_TIM16_CH1.ConfNb=1
 TIM16.Channel=TIM_CHANNEL_1
-TIM16.IPParameters=Channel,Period,Prescaler
-TIM16.Period=256
-TIM16.Prescaler=537
+TIM16.IPParameters=Channel,Period,Prescaler,OCPolarity_1
+TIM16.OCPolarity_1=TIM_OCPOLARITY_LOW
+TIM16.Period=255
+TIM16.Prescaler=312
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous
@@ -373,8 +305,6 @@ VP_ADC1_TempSens_Input.Mode=IN-TempSens
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
-VP_IWDG_VS_IWDG.Mode=IWDG_Activate
-VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
