--- a/FW/THPFW.ioc
+++ b/FW/THPFW.ioc
@@ -16,6 +16,11 @@ ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+CRC.CRCLength=CRC_POLYLENGTH_8B
+CRC.DefaultInitValueUse=DEFAULT_INIT_VALUE_DISABLE
+CRC.DefaultPolynomialUse=DEFAULT_POLYNOMIAL_DISABLE
+CRC.IPParameters=DefaultPolynomialUse,CRCLength,DefaultInitValueUse,InitValue
+CRC.InitValue=0xFF
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.Instance=DMA1_Channel1
 Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
@@ -33,10 +38,12 @@ I2C1.I2C_Speed_Mode=I2C_Fast
 I2C1.IPParameters=Timing,I2C_Speed_Mode
 I2C1.Timing=0x00301347
 I2C2.I2C_Speed_Mode=I2C_Fast
-I2C2.IPParameters=Timing,I2C_Speed_Mode
+I2C2.IPParameters=Timing,I2C_Speed_Mode,NoStretchMode
+I2C2.NoStretchMode=I2C_NOSTRETCH_ENABLE
 I2C2.Timing=0x00301347
 I2C3.I2C_Speed_Mode=I2C_Fast
-I2C3.IPParameters=Timing,I2C_Speed_Mode
+I2C3.IPParameters=Timing,I2C_Speed_Mode,NoStretchMode
+I2C3.NoStretchMode=I2C_NOSTRETCH_ENABLE
 I2C3.Timing=0x00301347
 KeepUserPlacement=false
 Mcu.CPN=STM32L431CCT6
@@ -153,8 +160,9 @@ PA6.Locked=true
 PA6.Signal=GPIO_Output
 PA7.Mode=I2C
 PA7.Signal=I2C3_SCL
-PA8.GPIOParameters=GPIO_Label
+PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA8.GPIO_Label=RST2
+PA8.GPIO_PuPd=GPIO_PULLUP
 PA8.Locked=true
 PA8.Signal=GPIO_Output
 PA9.Mode=I2C
@@ -181,8 +189,9 @@ PB13.Signal=I2C2_SCL
 PB14.Locked=true
 PB14.Mode=I2C
 PB14.Signal=I2C2_SDA
-PB15.GPIOParameters=GPIO_Label
+PB15.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB15.GPIO_Label=RST3
+PB15.GPIO_PuPd=GPIO_PULLUP
 PB15.Locked=true
 PB15.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
@@ -259,10 +268,13 @@ RCC.HCLKFreq_Value=40000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
+RCC.I2C1CLockSelection=RCC_I2C1CLKSOURCE_SYSCLK
 RCC.I2C1Freq_Value=40000000
+RCC.I2C2CLockSelection=RCC_I2C2CLKSOURCE_SYSCLK
 RCC.I2C2Freq_Value=40000000
+RCC.I2C3CLockSelection=RCC_I2C3CLKSOURCE_SYSCLK
 RCC.I2C3Freq_Value=40000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1CLockSelection,USART1Freq_Value,USART2CLockSelection,USART2Freq_Value,USART3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1CLockSelection,I2C1Freq_Value,I2C2CLockSelection,I2C2Freq_Value,I2C3CLockSelection,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1CLockSelection,USART1Freq_Value,USART2CLockSelection,USART2Freq_Value,USART3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
 RCC.LPTIM1Freq_Value=40000000
 RCC.LPTIM2Freq_Value=40000000
 RCC.LPUART1Freq_Value=40000000
