--- a/FW/THPFW.ioc
+++ b/FW/THPFW.ioc
@@ -19,7 +19,8 @@ CAD.provider=
 CRC.CRCLength=CRC_POLYLENGTH_8B
 CRC.DefaultInitValueUse=DEFAULT_INIT_VALUE_DISABLE
 CRC.DefaultPolynomialUse=DEFAULT_POLYNOMIAL_DISABLE
-CRC.IPParameters=DefaultPolynomialUse,CRCLength,DefaultInitValueUse,InitValue
+CRC.GeneratingPolynomial=X5+X4+X0
+CRC.IPParameters=DefaultPolynomialUse,CRCLength,DefaultInitValueUse,InitValue,GeneratingPolynomial
 CRC.InitValue=0xFF
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.Instance=DMA1_Channel1
@@ -32,6 +33,17 @@ Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.Request0=ADC1
 Dma.RequestsNb=1
+FREERTOS.FootprintOK=true
+FREERTOS.INCLUDE_vTaskDelayUntil=1
+FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configMINIMAL_STACK_SIZE,INCLUDE_vTaskDelayUntil,configUSE_NEWLIB_REENTRANT,configUSE_TICKLESS_IDLE,configTOTAL_HEAP_SIZE,MEMORY_ALLOCATION,FootprintOK,configUSE_TASK_NOTIFICATIONS
+FREERTOS.MEMORY_ALLOCATION=0
+FREERTOS.Tasks01=defaultTask,-2,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;THPMainTask,0,512,THP_MainTask,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.configENABLE_FPU=1
+FREERTOS.configMINIMAL_STACK_SIZE=128
+FREERTOS.configTOTAL_HEAP_SIZE=16384
+FREERTOS.configUSE_NEWLIB_REENTRANT=1
+FREERTOS.configUSE_TASK_NOTIFICATIONS=1
+FREERTOS.configUSE_TICKLESS_IDLE=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Speed_Mode=I2C_Fast
@@ -53,13 +65,13 @@ Mcu.IP1=CRC
 Mcu.IP10=USART1
 Mcu.IP11=USART2
 Mcu.IP2=DMA
-Mcu.IP3=I2C1
-Mcu.IP4=I2C2
-Mcu.IP5=I2C3
-Mcu.IP6=NVIC
-Mcu.IP7=RCC
-Mcu.IP8=SYS
-Mcu.IP9=TIM16
+Mcu.IP3=FREERTOS
+Mcu.IP4=I2C1
+Mcu.IP5=I2C2
+Mcu.IP6=I2C3
+Mcu.IP7=NVIC
+Mcu.IP8=RCC
+Mcu.IP9=SYS
 Mcu.IPNb=12
 Mcu.Name=STM32L431C(B-C)Tx
 Mcu.Package=LQFP48
@@ -90,8 +102,8 @@ Mcu.Pin3=PA0
 Mcu.Pin30=PB9
 Mcu.Pin31=VP_ADC1_TempSens_Input
 Mcu.Pin32=VP_CRC_VS_CRC
-Mcu.Pin33=VP_SYS_VS_Systick
-Mcu.Pin34=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin33=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin34=VP_SYS_VS_tim7
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
@@ -104,26 +116,34 @@ Mcu.UserConstants=
 Mcu.UserName=STM32L431CCTx
 MxCube.Version=6.8.1
 MxDb.Version=DB.6.0.81
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.RCC_IRQn=true\:0\:0\:false\:false\:false\:true\:false\:false
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:true\:false\:true\:false
-NVIC.USART1_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true\:true
-NVIC.USART2_IRQn=true\:0\:0\:false\:true\:true\:2\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.RCC_IRQn=true\:5\:0\:false\:false\:false\:true\:true\:false\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
+NVIC.SavedPendsvIrqHandlerGenerated=true
+NVIC.SavedSvcallIrqHandlerGenerated=true
+NVIC.SavedSystickIrqHandlerGenerated=true
+NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:false\:true\:false\:true\:false
+NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TimeBase=TIM7_IRQn
+NVIC.TimeBaseIP=TIM7
+NVIC.USART1_IRQn=true\:5\:0\:false\:true\:true\:1\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:5\:0\:false\:true\:true\:2\:true\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=Tamp
 PA0.Locked=true
 PA0.Mode=SYS_WakeUp0
 PA0.Signal=SYS_WKUP1
+PA10.GPIOParameters=GPIO_Pu
+PA10.GPIO_Pu=GPIO_PULLUP
 PA10.Mode=I2C
 PA10.Signal=I2C1_SDA
 PA11.GPIOParameters=GPIO_Label
@@ -138,26 +158,33 @@ PA13\ (JTMS-SWDIO).Mode=Serial_Wire
 PA13\ (JTMS-SWDIO).Signal=SYS_JTMS-SWDIO
 PA14\ (JTCK-SWCLK).Mode=Serial_Wire
 PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
-PA2.GPIOParameters=GPIO_Label
+PA2.GPIOParameters=GPIO_Speed,GPIO_Label
 PA2.GPIO_Label=SIM_UART_TX
+PA2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
-PA3.GPIOParameters=GPIO_Label
+PA3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA3.GPIO_Label=SIM_UART_RX
+PA3.GPIO_PuPd=GPIO_PULLUP
+PA3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=SIM_UART_RI
 PA4.Locked=true
 PA4.Signal=GPIO_Input
-PA5.GPIOParameters=GPIO_Label
+PA5.GPIOParameters=PinState,GPIO_Label
 PA5.GPIO_Label=SIM_UART_DTR
 PA5.Locked=true
+PA5.PinState=GPIO_PIN_SET
 PA5.Signal=GPIO_Output
-PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=SIM_GPS
+PA6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA6.GPIO_Label=GPS_1PPS
+PA6.GPIO_PuPd=GPIO_PULLUP
 PA6.Locked=true
-PA6.Signal=GPIO_Output
+PA6.Signal=GPIO_Input
+PA7.GPIOParameters=GPIO_Pu
+PA7.GPIO_Pu=GPIO_PULLUP
 PA7.Mode=I2C
 PA7.Signal=I2C3_SCL
 PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -165,59 +192,78 @@ PA8.GPIO_Label=RST2
 PA8.GPIO_PuPd=GPIO_PULLUP
 PA8.Locked=true
 PA8.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_Pu
+PA9.GPIO_Pu=GPIO_PULLUP
 PA9.Mode=I2C
 PA9.Signal=I2C1_SCL
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=SIM_PWR
 PB0.Locked=true
 PB0.Signal=GPIO_Output
-PB1.GPIOParameters=GPIO_Label
+PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB1.GPIO_Label=SIM_WDT
+PB1.GPIO_PuPd=GPIO_PULLUP
 PB1.Locked=true
 PB1.Signal=GPIO_Input
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=TP8
 PB10.Locked=true
 PB10.Signal=GPIO_Analog
-PB12.GPIOParameters=GPIO_Label
+PB12.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB12.GPIO_Label=BQ_INT
+PB12.GPIO_PuPd=GPIO_PULLUP
 PB12.Locked=true
 PB12.Signal=GPIO_Input
+PB13.GPIOParameters=GPIO_Pu
+PB13.GPIO_Pu=GPIO_PULLUP
 PB13.Locked=true
 PB13.Mode=I2C
 PB13.Signal=I2C2_SCL
+PB14.GPIOParameters=GPIO_Pu
+PB14.GPIO_Pu=GPIO_PULLUP
 PB14.Locked=true
 PB14.Mode=I2C
 PB14.Signal=I2C2_SDA
 PB15.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB15.GPIO_Label=RST3
-PB15.GPIO_PuPd=GPIO_PULLUP
+PB15.GPIO_PuPd=GPIO_NOPULL
 PB15.Locked=true
 PB15.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=TP7
 PB2.Locked=true
 PB2.Signal=GPIO_Analog
+PB4\ (NJTRST).GPIOParameters=GPIO_Pu
+PB4\ (NJTRST).GPIO_Pu=GPIO_PULLUP
 PB4\ (NJTRST).Mode=I2C
 PB4\ (NJTRST).Signal=I2C3_SDA
-PB5.GPIOParameters=GPIO_Label
+PB5.GPIOParameters=PinState,GPIO_Label
 PB5.GPIO_Label=LED1
 PB5.Locked=true
+PB5.PinState=GPIO_PIN_SET
 PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Speed
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
+PB7.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB7.GPIO_PuPd=GPIO_PULLUP
+PB7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
-PB8.GPIOParameters=GPIO_Label
+PB8.GPIOParameters=PinState,GPIO_Label
 PB8.GPIO_Label=LED2
 PB8.Locked=true
-PB8.Signal=S_TIM16_CH1
-PB9.GPIOParameters=GPIO_Label
+PB8.PinState=GPIO_PIN_SET
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB9.GPIO_Label=Main_SW
+PB9.GPIO_PuPd=GPIO_PULLDOWN
 PB9.Locked=true
 PB9.Signal=GPIO_Output
-PC13.GPIOParameters=GPIO_Label
+PC13.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC13.GPIO_Label=But_ONOFF
+PC13.GPIO_PuPd=GPIO_PULLDOWN
 PC13.Locked=true
 PC13.Signal=GPIO_Input
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
@@ -242,6 +288,7 @@ ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
+ProjectManager.MultiThreaded=true
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
@@ -251,21 +298,23 @@ ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
+ProjectManager.ThreadSafeStrategy=Cortex-M4NS\:Default,
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_CRC_Init-CRC-false-HAL-true,11-MX_TIM16_Init-TIM16-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_CRC_Init-CRC-false-HAL-true
 RCC.ADCFreq_Value=32000000
-RCC.AHBFreq_Value=40000000
-RCC.APB1Freq_Value=40000000
-RCC.APB1TimFreq_Value=40000000
-RCC.APB2Freq_Value=40000000
-RCC.APB2TimFreq_Value=40000000
-RCC.CortexFreq_Value=40000000
-RCC.FCLKCortexFreq_Value=40000000
+RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
+RCC.AHBFreq_Value=20000000
+RCC.APB1Freq_Value=20000000
+RCC.APB1TimFreq_Value=20000000
+RCC.APB2Freq_Value=20000000
+RCC.APB2TimFreq_Value=20000000
+RCC.CortexFreq_Value=20000000
+RCC.FCLKCortexFreq_Value=20000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=40000000
+RCC.HCLKFreq_Value=20000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
@@ -275,10 +324,10 @@ RCC.I2C2CLockSelection=RCC_I2C2CLKSOURCE_SYSCLK
 RCC.I2C2Freq_Value=40000000
 RCC.I2C3CLockSelection=RCC_I2C3CLKSOURCE_SYSCLK
 RCC.I2C3Freq_Value=40000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1CLockSelection,I2C1Freq_Value,I2C2CLockSelection,I2C2Freq_Value,I2C3CLockSelection,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1CLockSelection,USART1Freq_Value,USART2CLockSelection,USART2Freq_Value,USART3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
-RCC.LPTIM1Freq_Value=40000000
-RCC.LPTIM2Freq_Value=40000000
-RCC.LPUART1Freq_Value=40000000
+RCC.IPParameters=ADCFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1CLockSelection,I2C1Freq_Value,I2C2CLockSelection,I2C2Freq_Value,I2C3CLockSelection,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1CLockSelection,USART1Freq_Value,USART2CLockSelection,USART2Freq_Value,USART3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
+RCC.LPTIM1Freq_Value=20000000
+RCC.LPTIM2Freq_Value=20000000
+RCC.LPUART1Freq_Value=20000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
@@ -295,25 +344,17 @@ RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWRFreq_Value=40000000
 RCC.RNGFreq_Value=32000000
 RCC.SAI1Freq_Value=9142857.142857144
-RCC.SWPMI1Freq_Value=40000000
+RCC.SWPMI1Freq_Value=20000000
 RCC.SYSCLKFreq_VALUE=40000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.USART1CLockSelection=RCC_USART1CLKSOURCE_SYSCLK
 RCC.USART1Freq_Value=40000000
 RCC.USART2CLockSelection=RCC_USART2CLKSOURCE_SYSCLK
 RCC.USART2Freq_Value=40000000
-RCC.USART3Freq_Value=40000000
+RCC.USART3Freq_Value=20000000
 RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=80000000
 RCC.VCOSAI1OutputFreq_Value=64000000
-SH.S_TIM16_CH1.0=TIM16_CH1,PWM Generation1 CH1
-SH.S_TIM16_CH1.ConfNb=1
-TIM16.Channel=TIM_CHANNEL_1
-TIM16.IPParameters=Channel,Period,Prescaler,OCPolarity_1,OCFastMode_PWM
-TIM16.OCFastMode_PWM=TIM_OCFAST_ENABLE
-TIM16.OCPolarity_1=TIM_OCPOLARITY_LOW
-TIM16.Period=256
-TIM16.Prescaler=312
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous
@@ -322,9 +363,9 @@ VP_ADC1_TempSens_Input.Mode=IN-TempSens
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
+VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
+VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
+VP_SYS_VS_tim7.Mode=TIM7
+VP_SYS_VS_tim7.Signal=SYS_VS_tim7
 board=custom
-isbadioc=false
+rtos.0.ip=FREERTOS
