--- a/FW/THPFW.ioc
+++ b/FW/THPFW.ioc
@@ -62,8 +62,9 @@ Mcu.CPN=STM32L431CCT6
 Mcu.Family=STM32L4
 Mcu.IP0=ADC1
 Mcu.IP1=CRC
-Mcu.IP10=USART1
-Mcu.IP11=USART2
+Mcu.IP10=SYS
+Mcu.IP11=USART1
+Mcu.IP12=USART2
 Mcu.IP2=DMA
 Mcu.IP3=FREERTOS
 Mcu.IP4=I2C1
@@ -71,8 +72,8 @@ Mcu.IP5=I2C2
 Mcu.IP6=I2C3
 Mcu.IP7=NVIC
 Mcu.IP8=RCC
-Mcu.IP9=SYS
-Mcu.IPNb=12
+Mcu.IP9=RTC
+Mcu.IPNb=13
 Mcu.Name=STM32L431C(B-C)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
@@ -103,14 +104,16 @@ Mcu.Pin30=PB9
 Mcu.Pin31=VP_ADC1_TempSens_Input
 Mcu.Pin32=VP_CRC_VS_CRC
 Mcu.Pin33=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin34=VP_SYS_VS_tim7
+Mcu.Pin34=VP_RTC_VS_RTC_Activate
+Mcu.Pin35=VP_RTC_VS_RTC_Calendar
+Mcu.Pin36=VP_SYS_VS_tim7
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=35
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431CCTx
@@ -303,7 +306,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-LL-true,10-MX_CRC_Init-CRC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-LL-true,10-MX_CRC_Init-CRC-false-HAL-true,11-MX_RTC_Init-RTC-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=20000000
@@ -324,7 +327,7 @@ RCC.I2C2CLockSelection=RCC_I2C2CLKSOURCE_SYSCLK
 RCC.I2C2Freq_Value=40000000
 RCC.I2C3CLockSelection=RCC_I2C3CLKSOURCE_SYSCLK
 RCC.I2C3Freq_Value=40000000
-RCC.IPParameters=ADCFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1CLockSelection,I2C1Freq_Value,I2C2CLockSelection,I2C2Freq_Value,I2C3CLockSelection,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1CLockSelection,USART1Freq_Value,USART2CLockSelection,USART2Freq_Value,USART3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1CLockSelection,I2C1Freq_Value,I2C2CLockSelection,I2C2Freq_Value,I2C3CLockSelection,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1CLockSelection,USART1Freq_Value,USART2CLockSelection,USART2Freq_Value,USART3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
 RCC.LPTIM1Freq_Value=20000000
 RCC.LPTIM2Freq_Value=20000000
 RCC.LPUART1Freq_Value=20000000
@@ -343,6 +346,7 @@ RCC.PLLSAI1RoutputFreq_Value=32000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWRFreq_Value=40000000
 RCC.RNGFreq_Value=32000000
+RCC.RTCFreq_Value=32000
 RCC.SAI1Freq_Value=9142857.142857144
 RCC.SWPMI1Freq_Value=20000000
 RCC.SYSCLKFreq_VALUE=40000000
@@ -355,6 +359,8 @@ RCC.USART3Freq_Value=20000000
 RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=80000000
 RCC.VCOSAI1OutputFreq_Value=64000000
+RTC.IPParameters=Year
+RTC.Year=24
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous
@@ -365,6 +371,10 @@ VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_tim7.Mode=TIM7
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
 board=custom
